     for attackers and targets. The function ai.get_attacks() still returns the
     full attack analysis.
   * Aspect fetcher functions (eg ai.get_aggression()) are now deprecated in favour
     of the ai.aspects table.
   * The location_set iter and stable_iter functions can now be called with no argument.
     In this case, they return an iterator suitable for use in a for loop.
 * Networking
   * Ported campaignd to use boost.asio instead of SDL_net.
   * Removed unit tests for old networking stack. This was the last part that
   depended on SDL_net
 * Performance:
   * When a heuristic determines that it's probably faster, the game predicts
     battle
     outcome by simulating a few thousand fights instead of calculating exact
     probabilities. This method is inexact, but in very complex battles
     (extremely high HP, drain, slow, berserk, etc.) it's significantly faster than the
     default damage calculation method.
 * Miscellaneous and bug fixes:
   * A new way to make units invulnerable for debugging: select the unit and type
     ";unit invulnerable=yes". This method operates by decreasing the opponent's hit
     chance to zero: as a result, it doesn't slow down damage prediction unlike the
     "increase HP to ridiculous levels" method.
   * The ;choose_level command now works in the tutorial and in [test] scenarios
   * Fixed a stray ; character appearing pre-entered in the command console.
   * Fixed bug in wesnothd that was causing server crashes if game with
     multiple network and local players was ran.
   * Added a tab to run the wmlxgettext tool to GUI.pyw
   * Fixed problem with Spectre's hitpoint bar positioning.
   * Fixed crash when unit with planned actions is killed before those actions are
     completed (bug #20071)
   * Show correct number of attacks in case of swarm weapon special (bug #24978)
   * Fixed bug that icons of buttons under the minimap disappeared when the
     player opened and closed a menu.